<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_paddingLeft"
    android:paddingRight="@dimen/activity_paddingRight"
    android:paddingBottom="@dimen/activity_paddingBottom">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_gray_1" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_new_EN"
        android:textSize="15sp"
        android:paddingTop="10dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_new"
        android:textSize="15sp"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/home_new_list"
        android:divider="@color/color_gray_1"
        android:dividerHeight="1px"
        android:scrollbars="none">
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:id="@+id/news_loadmore_ll">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/color_gray_1" />
        <Button
            android:id="@+id/news_loadmore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/load_more"
            android:textColor="@color/color_gray_2"
            android:background="#00000000"
            android:drawableRight="@drawable/down" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/color_gray_1" />
    </LinearLayout>
</LinearLayout>