<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/frag_home_icon_ll_1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:id="@+id/frag_home_block_1">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:src="@drawable/business"
                android:layout_gravity="center_horizontal"
                android:id="@+id/frag_home_icon_1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/business"
                android:textSize="15sp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/frag_home_title_1"
                android:textColor="@color/color_black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:id="@+id/frag_home_block_2">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:src="@drawable/advantage"
                android:layout_gravity="center_horizontal"
                android:id="@+id/frag_home_icon_2"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/advantage"
                android:textSize="15sp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/frag_home_title_2"
                android:textColor="@color/color_black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:id="@+id/frag_home_block_3">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:src="@drawable/solution"
                android:layout_gravity="center_horizontal"
                android:id="@+id/frag_home_icon_3"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/solution"
                android:textSize="15sp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/frag_home_title_3"
                android:textColor="@color/color_black"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/frag_home_icon_ll_2">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:id="@+id/frag_home_block_4">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:src="@drawable/about"
                android:layout_gravity="center_horizontal"
                android:id="@+id/frag_home_icon_4"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:textSize="15sp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/frag_home_title_4"
                android:textColor="@color/color_black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:id="@+id/frag_home_block_5">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:src="@drawable/experience"
                android:layout_gravity="center_horizontal"
                android:id="@+id/frag_home_icon_5"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/experience"
                android:textSize="15sp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/frag_home_title_5"
                android:textColor="@color/color_black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:id="@+id/frag_home_block_6">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:src="@drawable/cooperation"
                android:layout_gravity="center_horizontal"
                android:id="@+id/frag_home_icon_6"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cooperation"
                android:textSize="15sp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/frag_home_title_6"
                android:textColor="@color/color_black"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>