<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/color_gray_4"/>

    <LinearLayout
        android:id="@+id/item_ydznty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:paddingTop="0dp">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="94dp"
                android:layout_height="34dp"
                android:scaleType="fitXY"
                android:src="@drawable/classify_red"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/business_tag_ydznty"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="6dp"
                android:textColor="@color/color_white"
                android:textSize="14sp"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:gravity="center_vertical">
                <ImageView
                    android:id="@+id/ydznty_icon_1"
                    android:layout_width="24dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/bus_icon_zzspry"/>
                <TextView
                    android:id="@+id/ydznty_title_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="自助售票入园"
                    android:layout_marginLeft="15dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:gravity="center_vertical">
                <ImageView
                    android:id="@+id/ydznty_icon_2"
                    android:layout_width="24dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/bus_icon_zzyydl"/>
                <TextView
                    android:id="@+id/ydznty_title_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="自助语音导览"
                    android:layout_marginLeft="15dp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:gravity="center_vertical">
                <ImageView
                    android:id="@+id/ydznty_icon_3"
                    android:layout_width="24dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/bus_icon_yddtdh"/>
                <TextView
                    android:id="@+id/ydznty_title_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="移动地图导航"
                    android:layout_marginLeft="15dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:gravity="center_vertical">
                <ImageView
                    android:id="@+id/ydznty_icon_4"
                    android:layout_width="24dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/bus_icon_znkf"/>
                <TextView
                    android:id="@+id/ydznty_title_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="智能客服"
                    android:layout_marginLeft="15dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/item_shhyx"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="94dp"
                android:layout_height="34dp"
                android:scaleType="fitXY"
                android:src="@drawable/classify_purple"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/business_tag_shhyx"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="12dp"
                android:textColor="@color/color_white"
                android:textSize="14sp"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:gravity="center_vertical">
                <ImageView
                    android:id="@+id/shhyx_icon_1"
                    android:layout_width="24dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/bus_icon_ptjs"/>
                <TextView
                    android:id="@+id/shhyx_title_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="景区自媒体平台建设"
                    android:layout_marginLeft="15dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:gravity="center_vertical">
                <ImageView
                    android:id="@+id/shhyx_icon_2"
                    android:layout_width="24dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/bus_icon_sjyx"/>
                <TextView
                    android:id="@+id/shhyx_title_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="社交营销活动策划"
                    android:layout_marginLeft="15dp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:gravity="center_vertical">
                <ImageView
                    android:id="@+id/shhyx_icon_3"
                    android:layout_width="24dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/bus_icon_yycl"/>
                <TextView
                    android:id="@+id/shhyx_title_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="用户运营策略支持"
                    android:layout_marginLeft="15dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:gravity="center_vertical">
                <ImageView
                    android:id="@+id/shhyx_icon_4"
                    android:layout_width="24dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/bus_icon_yhyjfx"/>
                <TextView
                    android:id="@+id/shhyx_title_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="用户研究分析服务"
                    android:layout_marginLeft="15dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/item_sjhyx"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="94dp"
                android:layout_height="34dp"
                android:scaleType="fitXY"
                android:src="@drawable/classify_brown"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/business_tag_sjhyx"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="12dp"
                android:textColor="@color/color_white"
                android:textSize="14sp"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:gravity="center_vertical">
                <ImageView
                    android:id="@+id/sjhyx_icon_1"
                    android:layout_width="24dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/bus_icon_yhly"/>
                <TextView
                    android:id="@+id/sjhyx_title_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="用户来源精准分析"
                    android:layout_marginLeft="15dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:gravity="center_vertical">
                <ImageView
                    android:id="@+id/sjhyx_icon_2"
                    android:layout_width="24dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/bus_icon_yhhx"/>
                <TextView
                    android:id="@+id/sjhyx_title_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="自媒体用户画像"
                    android:layout_marginLeft="15dp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:gravity="center_vertical">
                <ImageView
                    android:id="@+id/sjhyx_icon_3"
                    android:layout_width="24dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/bus_icon_yyxgpg"/>
                <TextView
                    android:id="@+id/sjhyx_title_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="运营效果评估"
                    android:layout_marginLeft="15dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:gravity="center_vertical">
                <ImageView
                    android:id="@+id/sjhyx_icon_4"
                    android:layout_width="24dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/bus_icon_lljc"/>
                <TextView
                    android:id="@+id/sjhyx_title_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="景区客流量监测"
                    android:layout_marginLeft="15dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/item_ydds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="94dp"
                android:layout_height="34dp"
                android:scaleType="fitXY"
                android:src="@drawable/classify_green"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/business_tag_ydds"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:textColor="@color/color_white"
                android:textSize="14sp"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:gravity="center_vertical">
                <ImageView
                    android:id="@+id/ydds_icon_1"
                    android:layout_width="24dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/bus_icon_ydpw"/>
                <TextView
                    android:id="@+id/ydds_title_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="移动票务销售"
                    android:layout_marginLeft="15dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:gravity="center_vertical">
                <ImageView
                    android:id="@+id/ydds_icon_2"
                    android:layout_width="24dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/bus_icon_yddzsw"/>
                <TextView
                    android:id="@+id/ydds_title_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="移动电子商务"
                    android:layout_marginLeft="15dp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:gravity="center_vertical">
                <ImageView
                    android:id="@+id/ydds_icon_3"
                    android:layout_width="24dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/bus_icon_zyzh"/>
                <TextView
                    android:id="@+id/ydds_title_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="景区商业资源整合"
                    android:layout_marginLeft="15dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:gravity="center_vertical">
                <ImageView
                    android:id="@+id/ydds_icon_4"
                    android:layout_width="24dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/bus_icon_sjhxszc"/>
                <TextView
                    android:id="@+id/ydds_title_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="社交化销售支持"
                    android:layout_marginLeft="15dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>